Fix rewind and fast forward tooltips being cut off.

--- a/app/components/Button/style.scss
+++ b/app/components/Button/style.scss
@@ -72,3 +72,8 @@
         transform: scale(0.9);
     }
 }
+
+.ReactTooltip {
+    padding: $js__margin__thin $js__margin__thick;
+    font-size: 0.8em;
+}
