--- a/app/components/Verse/Hoc/VerseNav/style.scss
+++ b/app/components/Verse/Hoc/VerseNav/style.scss
@@ -19,5 +19,5 @@
     opacity: 1;
     animation: fontSnapback 0.16s;
 
-    z-index: $zIndex__verseChild__topMost;
+    z-index: $zIndex__lyricChild__topMost;
 }
